# swc-api

./: .dockerignore  Dockerfile  README.md  crud.py  database.py  fantasy_data.db  main.py  models.py  requirements.txt  test_crud.py  test_main.py
bulk/: csv_to_parquet.py
sdk/: pyproject.toml
sdk/src/swcpy/: __init__.py  swc_client.py  swc_config.py
sdk/src/swcpy/schemas/: schemas.py
sdk/tests/: test_swcpy.py
