[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swc_api"
version = "0.0.1"
authors = [
    { name="[Myeong Su Choi]" }
]
description = "Example Software Development Kit (SDK) from Hands-On API Book for AI and Data Science"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'pytest >=9.0.2',
    'httpx>=0.28.1',
    'python-dotenv>=1.2.2',
    'pydantic>=2.12.5',
    'backoff>=2.2.1',
    'pyarrow>=23.0.1',
    'pandas>=3.0.1'
]